[package]
name = "finstack-quant-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core primitives for Finstack Quant: Decimal-backed Money/Currency/FX, dates and calendars, market data, math, and an expression engine"
autobenches = false

[dependencies]
# Serde is a core public dependency: we rely on derive macros across the crate.
# Use default features (std) to avoid alloc/no_std mismatches.
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["macros", "formatting", "parsing", "serde", "serde-human-readable", "wasm-bindgen"] }
smallvec = { version = "1.15", default-features = false }
phf = { version = "0.13", features = ["macros"], default-features = false }
rustc-hash = { workspace = true }
parking_lot = "0.12"
lru = "0.16"
indexmap = { workspace = true, features = ["serde"] }
rust_decimal = { workspace = true, features = ["serde-with-str"] }
# `schemars` is a build-time/runtime dependency for JSON-Schema derivation.
# It is consumed downstream by `finstack-quant-valuations` (see
# `finstack-quant/valuations/tests/schema_audit.rs` and `valuations/schemas/`),
# which means feature-gating `JsonSchema` derives in this crate would
# cascade into the binding crates and the schema-parity test harness.
# Until a binary-size or compile-time bench shows the cost is material,
# `schemars` stays an unconditional dependency. Re-evaluate when the
# workspace adopts a `wasm-only` build profile that drops the JSON-schema
# story (binding consumers don't need it at runtime, only at build time
# for `valuations/schemas/` regeneration).
schemars = { workspace = true }
statrs = { version = "0.18", default-features = false }
nalgebra = { version = "0.34", features = ["serde-serialize"] }
num-complex = "0.4"
# Production-grade random number generation
rand = { version = "0.9.3", default-features = false, features = ["std"] }
rand_pcg = { version = "0.9", features = ["serde"] }
tracing = { version = "0.1", default-features = false }

[build-dependencies]
serde = { workspace = true, features = ["alloc"] }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
criterion = { workspace = true }
proptest = "1.11.0"
finstack-quant-test-utils = { path = "../test-utils", version = "0.6.0" }

[[bench]]
name = "daycount_operations"
harness = false

[[bench]]
name = "interpolation"
harness = false

[[bench]]
name = "curve_operations"
harness = false

[[bench]]
name = "rolling"
harness = false

[[bench]]
name = "solver_operations"
harness = false

[[bench]]
name = "rate_conversions"
harness = false

[[bench]]
name = "cashflow_operations"
harness = false

[[bench]]
name = "schedule_generation"
harness = false

[[bench]]
name = "expr_eval"
harness = false

[[bench]]
name = "migration_matrix"
harness = false

[[bench]]
name = "context_bump"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
