[package]
name = "finstack-quant-covenants"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Loan covenant specifications and evaluation engine for Finstack Quant: LBO, cov-lite, real estate, project-finance packages"

[dependencies]
finstack-quant-core = { path = "../core", version = "0.6.0" }
indexmap = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
time = { workspace = true, features = ["macros"] }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }

[lints]
workspace = true
