[package]
name = "finstack-quant-features"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Vectorized panel feature transforms for Finstack Quant"

[dependencies]
finstack-quant-core = { path = "../core", version = "0.6.0" }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
