[package]
name = "finstack-quant-margin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Margin, collateral, and XVA primitives for Finstack Quant"

[dependencies]
finstack-quant-core = { path = "../core", version = "0.6.0" }
finstack-quant-monte-carlo = { path = "../monte_carlo", version = "0.6.0", default-features = false }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
time = { workspace = true }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }

[dev-dependencies]
time = { workspace = true, features = ["macros"] }

[lints]
workspace = true
