[package]
name = "finstack-quant-statements-analytics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Credit covenant forecasting, alignment analysis, and reporting analytics over Finstack Quant statements"

[dependencies]
finstack-quant-core = { path = "../core" }
finstack-quant-covenants = { path = "../covenants" }
finstack-quant-statements = { path = "../statements" }
finstack-quant-valuations = { path = "../valuations" }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
time = { workspace = true }
tracing = { version = "0.1", default-features = false }

# rayon has no working thread pool on single-threaded wasm32; parallel
# code paths are cfg-gated to native targets, so the dependency is too.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.11"

[dev-dependencies]
time = { workspace = true, features = ["macros"] }

[lints]
workspace = true
