[package]
name = "finstack-quant-test-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal test fixtures and helpers shared across Finstack Quant crates (not intended for public consumption)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { version = "0.1", default-features = false }

[lints]
workspace = true
