[package]
name = "finstack-quant-valuations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Instrument pricing, cashflows, and risk for Finstack Quant: fixed income, derivatives, structured credit, Monte Carlo, and PDE/tree methods"
autobenches = false

[dependencies]
finstack-quant-core = { path = "../core", version = "0.6.0" }
finstack-quant-analytics = { path = "../analytics", version = "0.6.0" }
finstack-quant-cashflows = { path = "../cashflows", version = "0.6.0" }
finstack-quant-covenants = { path = "../covenants", version = "0.6.0" }
finstack-quant-margin = { path = "../margin", version = "0.6.0" }
finstack-quant-monte-carlo = { path = "../monte_carlo", version = "0.6.0", default-features = false }
finstack-quant-factor-model = { path = "../factor-model", version = "0.6.0" }
finstack-quant-valuations-macros = { path = "macros", version = "0.6.0" }
indexmap = { workspace = true, features = ["serde"] }
smallvec = { version = "1.15", default-features = false, features = ["serde"] }
rayon = "1.11"
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
time = { workspace = true }
rust_decimal = { workspace = true }
schemars = { workspace = true }
jsonschema = { version = "0.28", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
thiserror = { workspace = true }
num-complex = "0.4"
strum = { workspace = true, features = ["derive"] }
ts-rs = { version = "12", optional = true, features = ["serde-compat", "no-serde-warnings"] }

[dev-dependencies]
time = { workspace = true, features = ["macros"] }
proptest = "1.11.0"
criterion = { workspace = true }
rust_decimal_macros = { workspace = true }



[features]
default = []
ts_export = ["dep:ts-rs"]

[[bench]]
name = "bond_pricing"
harness = false

[[bench]]
name = "bond_future_bench"
harness = false

[[bench]]
name = "swap_pricing"
harness = false

[[bench]]
name = "option_pricing"
harness = false

[[bench]]
name = "cms_pricing"
harness = false

[[bench]]
name = "cds_pricing"
harness = false

[[bench]]
name = "cds_option_pricing"
harness = false

[[bench]]
name = "cds_tranche_pricing"
harness = false

[[bench]]
name = "cds_index_pricing"
harness = false

[[bench]]
name = "structured_credit_pricing"
harness = false

[[bench]]
name = "swaption_pricing"
harness = false

[[bench]]
name = "fourier_var_pricing"
harness = false

[[bench]]
name = "cashflow_generation"
harness = false

[[bench]]
name = "calibration"
harness = false

[[bench]]
name = "global_calibration"
harness = false

[[bench]]
name = "credit_factor_calibration"
harness = false

[[bench]]
name = "linear_rates"
harness = false

[[bench]]
name = "df_bootstrap"
harness = false

[[bench]]
name = "fwd_curve"
harness = false

[[bench]]
name = "mc_pricing"
harness = false

[[bench]]
name = "mc_exotics_pricing"
harness = false

[[bench]]
name = "merton_mc_pricing"
harness = false

[[bench]]
name = "fi_misc_pricing"
harness = false

[[bench]]
name = "pe_fund_pricing"
harness = false

[[bench]]
name = "equity_pricing"
harness = false

[[bench]]
name = "convertible_pricing"
harness = false

[[bench]]
name = "inflation_pricing"
harness = false

[[bench]]
name = "commodity_pricing"
harness = false

[[bench]]
name = "bucketed_risk"
harness = false

[[bench]]
name = "metrics"
harness = false

[[bench]]
name = "sabr_slice"
harness = false

[[bench]]
name = "fx_pricing"
harness = false

[[bench]]
name = "fx_exotics_pricing"
harness = false

[[bench]]
name = "xccy_pricing"
harness = false

[[bin]]
name = "gen_schemas"
path = "src/bin/gen_schemas.rs"

[lints]
workspace = true
