[package]
name = "finstack-attribution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
finstack-core = { path = "../core" }
finstack-cashflows = { path = "../cashflows" }
finstack-factor-model = { path = "../factor-model" }
finstack-valuations = { path = "../valuations" }
indexmap = { workspace = true, features = ["serde"] }
rayon = "1.11"
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }

[dev-dependencies]
criterion = { workspace = true }
proptest = "1.11.0"
rust_decimal = { workspace = true }
smallvec = { version = "1.15", default-features = false }
time = { workspace = true, features = ["macros"] }

[[bench]]
name = "attribution"
harness = false

[[bench]]
name = "attribution_scale"
harness = false
