[package]
name = "finstack-factor-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
finstack-core = { path = "../core" }
finstack-analytics = { path = "../analytics" }
serde = { workspace = true }
thiserror = { workspace = true }
