[package]
name = "finstack-factor-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Factor model framework for Finstack with hierarchical credit factor decomposition and offline calibration"

[dependencies]
finstack-core = { path = "../core" }
finstack-analytics = { path = "../analytics" }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = "1.11.0"
serde_json = { workspace = true }
time = { workspace = true, features = ["macros"] }

[[bench]]
name = "factor_model"
harness = false
