[package]
name = "finstack-scenarios"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Deterministic scenario DSL for Finstack with preview, composition, and phase-ordered apply across market/statements/valuations"

[dependencies]
finstack-attribution = { path = "../attribution" }
finstack-core = { path = "../core" }
finstack-statements = { path = "../statements" }
finstack-valuations = { path = "../valuations" }
indexmap = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["macros"] }
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
criterion = { workspace = true }
finstack-test-utils = { path = "../test-utils" }

[[bench]]
name = "scenarios"
harness = false

[lints]
workspace = true
