[package]
name = "finstack-quant-statements-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.finstack-quant-statements]
path = ".."

[[bin]]
name = "parse_formula"
path = "fuzz_targets/parse_formula.rs"
doc = false

[workspace]
